save learning rate. remember to normalize the rewards.

--- a/model/trading_model.ipynb
+++ b/model/trading_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,8 +14,10 @@
     "from os.path import isfile, join, splitext\n",
     "import random\n",
     "from datetime import datetime, timedelta\n",
+    "import time\n",
     "\n",
     "from process_raw_prices import *\n",
+    "\n",
     "\n",
     "# Some more magic so that the notebook will reload external python modules;\n",
     "# see http://stackoverflow.com/questions/1907993/autoreload-of-modules-in-ipython\n",
@@ -25,7 +27,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/u21376/fyp/code/model\n"
+     ]
+    }
+   ],
+   "source": [
+    "# make sure the jupyter notebook run in this working directory\n",
+    "%cd ~/fyp/code/model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +54,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total number of pair slices: 26680\n",
+      "Total number of pair slices for training: 50\n",
+      "Total number of pair slices for testing: 50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# processed dataset folder path\n",
+    "dataset_folder_path = '../../dataset/nyse-daily-transformed'\n",
+    "os.makedirs(dataset_folder_path, exist_ok=True)\n",
+    "\n",
+    "# raw dataset files pattern\n",
+    "raw_files_path_pattern = \"../../dataset/nyse-daily-trimmed-same-length/*.csv\"\n",
+    "\n",
+    "df_columns = ['close1', 'close2', 'normalizedLogClose1', 'normalizedLogClose2', 'spread', 'alpha', 'beta']\n",
+    "ind = {'y_close': 0, 'x_close': 1, 'spread': 4}\n",
+    "\n",
+    "# compute dataset for training\n",
+    "all_pairs_slices = [splitext(f)[0] for f in os.listdir(dataset_folder_path) if isfile(join(dataset_folder_path, f))]\n",
+    "if len(all_pairs_slices) == 0:\n",
+    "    generate_pairs_training_data(raw_files_path_pattern=raw_files_path_pattern,\n",
+    "                                 result_path=dataset_folder_path,\n",
+    "                                 min_size=252*4,\n",
+    "                                 training_period=52,\n",
+    "                                 points_per_cut=252\n",
+    "                                )\n",
+    "    all_pairs_slices = [splitext(f)[0] for f in os.listdir(dataset_folder_path) if isfile(join(dataset_folder_path, f))]\n",
+    "print(\"Total number of pair slices: %d\" % len(all_pairs_slices))\n",
+    "\n",
+    "# split for training and testing\n",
+    "all_pairs = sorted(list(set(['-'.join(p.split('-')[0:2]) for p in all_pairs_slices])))[:25]\n",
+    "# all_pairs = [\"VMW-WUBA\"]\n",
+    "# all_pairs = [\"TWTR-UIS\"]\n",
+    "all_pairs_slices_train = []\n",
+    "all_pairs_slices_test = []\n",
+    "for p in all_pairs:\n",
+    "    all_pairs_slices_train += [p+'-0', p+'-1']\n",
+    "    all_pairs_slices_test += [p+'-2', p+'-3']\n",
+    "print(\"Total number of pair slices for training: %d\" % len(all_pairs_slices_train))\n",
+    "print(\"Total number of pair slices for testing: %d\" % len(all_pairs_slices_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['AAN-AER',\n",
+       " 'AAN-AL',\n",
+       " 'AAN-AMBR',\n",
+       " 'AAN-AMN',\n",
+       " 'AAN-ANET',\n",
+       " 'AAN-ASGN',\n",
+       " 'AAN-ATEN',\n",
+       " 'AAN-ATHM',\n",
+       " 'AAN-ATU',\n",
+       " 'AAN-AUO',\n",
+       " 'AAN-AYR',\n",
+       " 'AAN-BHE',\n",
+       " 'AAN-BITA',\n",
+       " 'AAN-CACI',\n",
+       " 'AAN-CAI',\n",
+       " 'AAN-CLGX',\n",
+       " 'AAN-CLS',\n",
+       " 'AAN-CMCM',\n",
+       " 'AAN-CRM',\n",
+       " 'AAN-CSLT',\n",
+       " 'AAN-CTS',\n",
+       " 'AAN-CW',\n",
+       " 'AAN-DATA',\n",
+       " 'AAN-DDD',\n",
+       " 'AAN-DOV']"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "all_pairs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +157,7 @@
     "batch_size = 50\n",
     "\n",
     "# number of batch in training\n",
-    "num_of_batch = 15000\n",
+    "num_of_batch = batch_size * 15\n",
     "\n",
     "# fixed number of time steps in one episode (not used)\n",
     "trading_period = 200\n",
@@ -63,28 +178,20 @@
     "layer1_out_num = 30\n",
     "\n",
     "# learning rate\n",
-    "lr = 3e-3\n",
+    "lr = 6e-3\n",
+    "\n",
+    "reg = 0.001\n",
     "\n",
     "# discount factor in reinforcement learning\n",
     "gamma = 1\n",
     "\n",
     "# random action probability\n",
-    "rand_action_prob = 0.05\n",
+    "rand_action_prob = 0.1\n",
     "\n",
     "batch_per_print = 50\n",
     "\n",
     "# dummy initial cash\n",
     "initial_cash = 10000\n",
-    "\n",
-    "# processed dataset folder path\n",
-    "dataset_folder_path = '../../dataset/nyse-daily-transformed'\n",
-    "os.makedirs(dataset_folder_path, exist_ok=True)\n",
-    "\n",
-    "# raw dataset files pattern\n",
-    "raw_files_path_pattern = \"../../dataset/nyse-daily-trimmed-same-length/*.csv\"\n",
-    "\n",
-    "df_columns = ['close1', 'close2', 'normalizedLogClose1', 'normalizedLogClose2', 'spread', 'alpha', 'beta']\n",
-    "ind = {'y_close': 0, 'x_close': 1, 'spread': 4}\n",
     "\n",
     "# checkpoint folder\n",
     "checkpoint_dir = '../../model_checkpoint/'\n",
@@ -93,38 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# compute dataset for training\n",
-    "all_pairs_slices = [splitext(f)[0] for f in os.listdir(dataset_folder_path) if isfile(join(dataset_folder_path, f))]\n",
-    "if len(all_pairs_slices) == 0:\n",
-    "    generate_pairs_training_data(raw_files_path_pattern=raw_files_path_pattern,\n",
-    "                                 result_path=dataset_folder_path,\n",
-    "                                 min_size=252*4,\n",
-    "                                 training_period=52,\n",
-    "                                 points_per_cut=252\n",
-    "                                )\n",
-    "    all_pairs_slices = [splitext(f)[0] for f in os.listdir(dataset_folder_path) if isfile(join(dataset_folder_path, f))]\n",
-    "print(\"Total number of pair slices: %d\" % len(all_pairs_slices))\n",
-    "\n",
-    "# split for training and testing\n",
-    "all_pairs = list(set(['-'.join(p.split('-')[0:2]) for p in all_pairs_slices]))\n",
-    "# all_pairs = [\"VMW-WUBA\"]\n",
-    "# all_pairs = [\"TWTR-UIS\"]\n",
-    "all_pairs_slices_train = []\n",
-    "all_pairs_slices_test = []\n",
-    "for p in all_pairs:\n",
-    "    all_pairs_slices_train += [p+'-0', p+'-1']\n",
-    "    all_pairs_slices_test += [p+'-2', p+'-3']\n",
-    "print(\"Total number of pair slices for training: %d\" % len(all_pairs_slices_train))\n",
-    "print(\"Total number of pair slices for testing: %d\" % len(all_pairs_slices_test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,13 +223,15 @@
     "def compute_input_history(history):\n",
     "    \"\"\"Slicing history in its second dimension.\"\"\"\n",
     "    # no slicing for now\n",
-    "    return history\n",
+    "    return history[:,2:]\n",
     "\n",
     "def sample_action(logits, random=False):\n",
     "    if random:\n",
     "        dist = tf.distributions.Categorical(logits=tf.zeros([batch_size, a_num]))\n",
     "    else:\n",
     "        dist = tf.distributions.Categorical(logits=logits)\n",
+    "\n",
+    "#     dist = tf.distributions.Categorical(logits=logits)\n",
     "    \n",
     "    # 1-D Tensor where the i-th element correspond to a sample from\n",
     "    # the i-th categorical distribution\n",
@@ -233,15 +311,18 @@
     "        super(TradingPolicyModel, self).__init__()\n",
     "        self.dense1 = tf.layers.Dense(units=layer1_out_num,\n",
     "                                      activation=myLeakyReLU,\n",
-    "                                      kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
+    "                                      kernel_initializer=tf.contrib.layers.xavier_initializer(),\n",
+    "                                      kernel_regularizer=tf.contrib.layers.l2_regularizer(reg)\n",
     "                                     )\n",
     "        self.dense2 = tf.layers.Dense(units=layer1_out_num,\n",
     "                                      activation=myLeakyReLU,\n",
-    "                                      kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
+    "                                      kernel_initializer=tf.contrib.layers.xavier_initializer(),\n",
+    "                                      kernel_regularizer=tf.contrib.layers.l2_regularizer(reg)\n",
     "                                     )\n",
     "        self.dense3 = tf.layers.Dense(units=layer1_out_num,\n",
     "                                      activation=myLeakyReLU,\n",
-    "                                      kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
+    "                                      kernel_initializer=tf.contrib.layers.xavier_initializer(),\n",
+    "                                      kernel_regularizer=tf.contrib.layers.l2_regularizer(reg)\n",
     "                                     )\n",
     "#         self.dense4 = tf.layers.Dense(units=layer1_out_num,\n",
     "#                                       activation=tf.keras.layers.LeakyReLU(),\n",
@@ -249,7 +330,8 @@
     "#                                      )\n",
     "        self.logits = tf.layers.Dense(units=a_num,\n",
     "                                      activation=myLeakyReLU,\n",
-    "                                      kernel_initializer=tf.contrib.layers.xavier_initializer()\n",
+    "                                      kernel_initializer=tf.contrib.layers.xavier_initializer(),\n",
+    "                                      kernel_regularizer=tf.contrib.layers.l2_regularizer(reg)\n",
     "                                     )\n",
     "\n",
     "    def call(self, inputs):\n",
@@ -270,8 +352,8 @@
     "        self.state = self.cell.zero_state(batch_size, tf.float32)\n",
     "    \n",
     "    def call(self, inputs):\n",
-    "        oberservation, self.state = self.cell(inputs, self.state)\n",
-    "        return oberservation\n",
+    "        output, self.state = self.cell(inputs, self.state)\n",
+    "        return output\n",
     "        \n",
     "    def reset_state(self):\n",
     "        self.state = self.cell.zero_state(batch_size, tf.float32)\n",
@@ -287,7 +369,9 @@
     "    def __init__(self, state_encoding_model):\n",
     "        # do some initialization\n",
     "        self.state_encoding_model = state_encoding_model\n",
-    "        self._reset_env()\n",
+    "        \n",
+    "        # use training dataset\n",
+    "        self._reset_env(training=True)\n",
     "        \n",
     "    def _reset_env(self, training=True):\n",
     "        self.t = 0\n",
@@ -314,11 +398,10 @@
     "    \n",
     "    def reset(self, training=True):\n",
     "        \"\"\"Return an initial state for the trading environment\"\"\"\n",
-    "        if self.t == 0 and True:\n",
-    "            return self.state\n",
-    "        else:\n",
-    "            self._reset_env(training=training)\n",
-    "            return self.state\n",
+    "        \n",
+    "        # determine what dataset to use\n",
+    "        self._reset_env(training=training)\n",
+    "        return self.state\n",
     "    \n",
     "    def compute_reward(self, action):\n",
     "        \"\"\"Compute the reward at time t which is the change in total portfolio value\n",
@@ -399,15 +482,15 @@
     "#         # update state\n",
     "#         self.state = self.state_encoding_model(partial_state)\n",
     "\n",
-    "        observation = self.input_history[self.t].T\n",
+    "        observation = tf.convert_to_tensor(self.input_history[self.t].T, dtype=tf.float32)\n",
     "    \n",
     "        # use rnn to encode observationans and current stock state into next stock state\n",
     "        stock_state = self.state_encoding_model(observation)\n",
     "        \n",
     "        portfolio_state = np.array([\n",
     "            self.total_portfolio_value,\n",
-    "            self.quantity['y'],\n",
-    "            self.quantity['x']\n",
+    "#             self.quantity['y'],\n",
+    "#             self.quantity['x']\n",
     "        ]).T\n",
     "        \n",
     "        # stock state and portfolio state together form the whole environment state\n",
@@ -445,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,13 +544,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# average_total_r = np.zeros(batch_size)\n",
+    "# done = False\n",
+    "# s = env.reset(training=True)\n",
+    "\n",
+    "# with tf.GradientTape() as gt:\n",
+    "#     done = False\n",
+    "#     s = env.reset(training=True)\n",
+    "\n",
+    "#     # internally the episode length is fixed by trading_period\n",
+    "#     while not done:\n",
+    "#         logits = pi(s)\n",
+    "#         a = sample_action(logits)\n",
+    "#         r, next_s, done = env.step(a.numpy())\n",
+    "#         average_total_r += r\n",
+    "# print('total_r_per_ep: {}'.format(np.mean(average_total_r)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "batch id: 49, average_total_r_per_ep: -14.19539047630424, time spent per 50 batches: 48.420685052871704\n",
+      "batch id: 99, average_total_r_per_ep: 118.98878773209336, time spent per 50 batches: 49.07785749435425\n",
+      "batch id: 149, average_total_r_per_ep: 6.104307943822537, time spent per 50 batches: 48.508705615997314\n",
+      "batch id: 199, average_total_r_per_ep: 25.58520876447543, time spent per 50 batches: 48.62224292755127\n",
+      "batch id: 249, average_total_r_per_ep: 124.88940397529517, time spent per 50 batches: 48.63754916191101\n",
+      "batch id: 299, average_total_r_per_ep: 121.84140278296454, time spent per 50 batches: 48.45488715171814\n",
+      "batch id: 349, average_total_r_per_ep: 296.4384063599431, time spent per 50 batches: 48.8565309047699\n",
+      "batch id: 399, average_total_r_per_ep: 184.72184430070646, time spent per 50 batches: 49.28349018096924\n",
+      "batch id: 449, average_total_r_per_ep: 256.45557169353435, time spent per 50 batches: 48.74324703216553\n",
+      "batch id: 499, average_total_r_per_ep: 220.15725844501142, time spent per 50 batches: 48.80177927017212\n",
+      "batch id: 549, average_total_r_per_ep: 169.35532107117163, time spent per 50 batches: 48.91564583778381\n",
+      "batch id: 599, average_total_r_per_ep: 69.3099967721269, time spent per 50 batches: 48.837608098983765\n",
+      "batch id: 649, average_total_r_per_ep: 287.02397757474444, time spent per 50 batches: 48.44747257232666\n",
+      "batch id: 699, average_total_r_per_ep: 96.68469320997023, time spent per 50 batches: 49.37177562713623\n",
+      "batch id: 749, average_total_r_per_ep: 285.8434631655366, time spent per 50 batches: 48.900688886642456\n",
+      "Finished training~\n"
+     ]
+    }
+   ],
    "source": [
     "# for training reference only\n",
     "average_total_r = np.zeros(batch_size)\n",
     "\n",
+    "start_time = time.time()\n",
     "for batch in range(num_of_batch):\n",
     "    \n",
     "    # saving for update\n",
@@ -497,6 +627,7 @@
     "#             print(r[0])\n",
     "#             print(env.total_portfolio_value[0])\n",
     "#             print(done)\n",
+    "#             print(logits)\n",
     "\n",
     "        all_logits_stack = tf.stack(all_logits)\n",
     "        all_actions_stack = tf.stack(all_actions)\n",
@@ -506,28 +637,41 @@
     "        all_cum_rewards = discount_rewards(all_rewards_stack, all_actions_stack.numpy())\n",
     "        all_cum_rewards -= np.mean(all_cum_rewards)\n",
     "        all_cum_rewards /= np.std(all_cum_rewards)\n",
+    "#         all_cum_rewards /= np.abs(all_cum_rewards).max()\n",
     "        all_cum_rewards = tf.convert_to_tensor(all_cum_rewards, dtype=tf.float32)\n",
     "\n",
     "        loss_value = loss(all_logits_stack, all_actions_stack, all_cum_rewards)\n",
     "    \n",
-    "    if (batch+1) % batch_per_print == 0:\n",
-    "        print(\"batch id: {}, average_total_r_per_ep: {}\".format(batch, np.mean(average_total_r/batch_per_print)))\n",
-    "        average_total_r = np.zeros(batch_size)\n",
-    "    \n",
     "    grads = gt.gradient(loss_value, state_encoding_model.variables + pi.variables)\n",
-    "    optimizer.apply_gradients(zip(grads, state_encoding_model.variables + pi.variables))"
+    "    optimizer.apply_gradients(zip(grads, state_encoding_model.variables + pi.variables))\n",
+    "    \n",
+    "    if (batch+1) % batch_per_print == 0:\n",
+    "        end_time = time.time()\n",
+    "        print(\"batch id: {}, average_total_r_per_ep: {}, time spent per {} batches: {}\".format(\n",
+    "            batch, np.mean(average_total_r/batch_per_print), batch_per_print, end_time-start_time))\n",
+    "        average_total_r = np.zeros(batch_size)\n",
+    "        start_time = time.time()\n",
+    "print('Finished training~')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "At test time, average_total_r_per_ep: 667.574678546176\n"
+     ]
+    }
+   ],
    "source": [
     "# test time\n",
     "average_total_r = np.zeros(batch_size)\n",
     "done = False\n",
-    "s = env.reset()\n",
+    "s = env.reset(training=False)\n",
     "\n",
     "# internally the episode length is fixed by trading_period\n",
     "while not done:\n",
