--- a/jupyter-py/5b-Distance-Method-Grid-Search.ipynb
+++ b/jupyter-py/5b-Distance-Method-Grid-Search.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from grid_search_tools import GSTools\n",
     "from ptstrategy import PTStrategy\n",
@@ -45,10 +36,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 7,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# INPUT PARAMETERS\n",
@@ -71,7 +60,7 @@
     "MAX_LOOKBACK = max(LOOKBACK_VALUE)\n",
     "\n",
     "# Where to save the ouputs\n",
-    "DST_DIR = \"../backtest-results/distance/test1/\""
+    "DST_DIR = \"../backtest-results/distance/test2/\""
    ]
   },
   {
@@ -83,10 +72,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 8,
+   "metadata": {},
    "outputs": [],
    "source": [
     "CONFIG = {\n",
@@ -124,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -208,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -274,8 +261,8 @@
     "\n",
     "        # get data of both stock\n",
     "        stk0_df, stk1_df = data[stk0], data[stk1]\n",
-    "        stk0_df_test = stk0_df[PAIR_FORMATION_LEN + MAX_LOOKBACK : PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
-    "        stk1_df_test = stk1_df[PAIR_FORMATION_LEN + MAX_LOOKBACK : PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
+    "        stk0_df_test = stk0_df[PAIR_FORMATION_LEN : PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
+    "        stk1_df_test = stk1_df[PAIR_FORMATION_LEN : PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
     "        \n",
     "        # Create a cerebro\n",
     "        cerebro = bt.Cerebro()\n",
@@ -756,8 +743,8 @@
     "def backtest_single_pair(_stk0, _stk1, _lookback, _enter_threshold_size, _exit_threshold_size, _loss_limit):\n",
     "    # get data of both stock\n",
     "    stk0_df, stk1_df = data[_stk0], data[_stk1]\n",
-    "    stk0_df_test = stk0_df[PAIR_FORMATION_LEN + MAX_LOOKBACK : PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
-    "    stk1_df_test = stk1_df[PAIR_FORMATION_LEN + MAX_LOOKBACK : PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
+    "    stk0_df_test = stk0_df[PAIR_FORMATION_LEN : PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
+    "    stk1_df_test = stk1_df[PAIR_FORMATION_LEN : PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
     "\n",
     "    # Create a cerebro\n",
     "    cerebro = bt.Cerebro()\n",
@@ -1048,9 +1035,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (traders_nlp)",
+   "display_name": "Python 3 (Intel, 2018 update 2)",
    "language": "python",
-   "name": "traders_nlp"
+   "name": "c009-intel_distribution_of_python_3_2018u2"
   },
   "language_info": {
    "codemirror_mode": {
