edited backtest to include PRE_PAIR_FORMATION

--- a/jupyter-py/5c-Cointegration-Method-Grid-Search.ipynb
+++ b/jupyter-py/5c-Cointegration-Method-Grid-Search.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,33 +36,34 @@
     "\n",
     "DIR = \"../ib-data/nyse-daily-tech/\"\n",
     "\n",
-    "BT_START_DT = '2016-01-04'\n",
-    "TEST_PERIOD = 252 + 3\n",
+    "BT_START_DT = '2016-03-18'\n",
+    "TEST_PERIOD = 500\n",
     "\n",
+    "PRE_PAIR_FORMATION = 252 + 52 - 60 - 45\n",
     "PAIR_FORMATION_LEN = 60\n",
     "\n",
     "# top PCT percentage of the pairs with lowest distance will be backtested\n",
-    "PCT = 0.01\n",
+    "PCT = 1.0\n",
     "\n",
     "# STRATEGY PARAMETERS\n",
-    "LOOKBACK_VALUE = [30, 35, 40, 45, 50]\n",
+    "LOOKBACK_VALUE = [20, 30, 40, 45]\n",
     "ENTER_THRESHOLD_SIZE = [2, 3]\n",
     "EXIT_THRESHOLD_SIZE = [0.5]\n",
-    "LOSS_LIMIT = [-0.005, -0.01]\n",
+    "LOSS_LIMIT = [-0.005, -0.01, -0.015]\n",
     "MAX_LOOKBACK = max(LOOKBACK_VALUE)\n",
     "CONSIDER_BORROW_COST = False\n",
-    "CONSIDER_COMMISSION = False\n",
+    "CONSIDER_COMMISSION = True\n",
     "\n",
     "# ADDITIONAL INFO\n",
     "OTHER_INFO = \"Added alpha > 0 conditions\"\n",
     "\n",
     "# Where to save the ouputs\n",
-    "DST_DIR = \"../backtest-results/cointegration/test2/\""
+    "DST_DIR = \"../backtest-results/cointegration/progress-report-v2/\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,6 +71,7 @@
     "    'DIR': DIR,\n",
     "    'BT_START_DT': BT_START_DT,\n",
     "    'TEST_PERIOD': TEST_PERIOD,\n",
+    "    'PRE_PAIR_FORMATION': PRE_PAIR_FORMATION,\n",
     "    'PAIR_FORMATION_LEN': PAIR_FORMATION_LEN,\n",
     "    'PCT': PCT,\n",
     "    'LOOKBACK_VALUE': LOOKBACK_VALUE,\n",
@@ -97,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -106,12 +108,12 @@
      "text": [
       "---------------------------------------------------------------------\n",
       "Initial number of datafeeds: 2517.\n",
-      "To fulfill BT_START_DT, PAIR_FORMATION_LEN and MAX_LOOKBACK, size = 867.\n",
-      "After cutting datafeeds, 122 datafeeds remaining.\n",
-      "Backtest start date: 2016-01-04 00:00:00\n",
-      "Backtest end date: 2017-01-05 00:00:00\n",
+      "To fulfill BT_START_DT, PAIR_FORMATION_LEN and MAX_LOOKBACK, size = 1009.\n",
+      "After cutting datafeeds, 116 datafeeds remaining.\n",
+      "Backtest start date: 2016-03-18 00:00:00\n",
+      "Backtest end date: 2018-03-13 00:00:00\n",
       "No null values detected in aggregated close price df.\n",
-      "From 7381 pairs, 73 pairs passed the cointegration test.\n",
+      "From 6670 pairs, 360 pairs passed the cointegration test.\n",
       "---------------------------------------------------------------------\n"
      ]
     }
@@ -129,7 +131,7 @@
     "###################################################################################################################\n",
     "# get position of intended start date of backtest\n",
     "bt_start_idx = dt_idx.get_loc(BT_START_DT)\n",
-    "size = PAIR_FORMATION_LEN + MAX_LOOKBACK + (len(dt_idx) - bt_start_idx)\n",
+    "size = PRE_PAIR_FORMATION + PAIR_FORMATION_LEN + MAX_LOOKBACK + (len(dt_idx) - bt_start_idx)\n",
     "\n",
     "print(\"To fulfill BT_START_DT, PAIR_FORMATION_LEN and MAX_LOOKBACK, size = \" + str(size) + \".\")\n",
     "\n",
@@ -143,8 +145,8 @@
     "data, start_dt, end_dt = GSTools.sync_start_end(data)\n",
     "dt_idx = GSTools.get_trading_dates(data)\n",
     "\n",
-    "print(\"Backtest start date: \" + str(dt_idx[PAIR_FORMATION_LEN + MAX_LOOKBACK]))\n",
-    "print(\"Backtest end date: \" + str(dt_idx[PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD - 1]))\n",
+    "print(\"Backtest start date: \" + str(dt_idx[PRE_PAIR_FORMATION + PAIR_FORMATION_LEN + MAX_LOOKBACK]))\n",
+    "print(\"Backtest end date: \" + str(dt_idx[PRE_PAIR_FORMATION + PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD - 1]))\n",
     "\n",
     "###################################################################################################################\n",
     "# get aggregated close prices\n",
@@ -164,7 +166,7 @@
     "\n",
     "###################################################################################################################\n",
     "# pair selection\n",
-    "good_pairs = coint(df=close_df[0:PAIR_FORMATION_LEN], intercept=True, sig_level=0.005)\n",
+    "good_pairs = coint(df=close_df[PRE_PAIR_FORMATION:PRE_PAIR_FORMATION + PAIR_FORMATION_LEN], intercept=True, sig_level=0.005)\n",
     "good_pairs.sort(key=lambda x: x[2])\n",
     "good_pairs = good_pairs[0 : K]\n",
     "\n",
@@ -175,73 +177,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running 1/20\n",
-      "Backtesting all pairs using parameters (30, 2, 0.5, -0.005)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 2/20\n",
-      "Backtesting all pairs using parameters (30, 2, 0.5, -0.01)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 3/20\n",
-      "Backtesting all pairs using parameters (30, 3, 0.5, -0.005)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 4/20\n",
-      "Backtesting all pairs using parameters (30, 3, 0.5, -0.01)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 5/20\n",
-      "Backtesting all pairs using parameters (35, 2, 0.5, -0.005)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 6/20\n",
-      "Backtesting all pairs using parameters (35, 2, 0.5, -0.01)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 7/20\n",
-      "Backtesting all pairs using parameters (35, 3, 0.5, -0.005)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 8/20\n",
-      "Backtesting all pairs using parameters (35, 3, 0.5, -0.01)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 9/20\n",
-      "Backtesting all pairs using parameters (40, 2, 0.5, -0.005)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 10/20\n",
-      "Backtesting all pairs using parameters (40, 2, 0.5, -0.01)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 11/20\n",
-      "Backtesting all pairs using parameters (40, 3, 0.5, -0.005)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 12/20\n",
-      "Backtesting all pairs using parameters (40, 3, 0.5, -0.01)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 13/20\n",
-      "Backtesting all pairs using parameters (45, 2, 0.5, -0.005)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 14/20\n",
-      "Backtesting all pairs using parameters (45, 2, 0.5, -0.01)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 15/20\n",
-      "Backtesting all pairs using parameters (45, 3, 0.5, -0.005)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 16/20\n",
-      "Backtesting all pairs using parameters (45, 3, 0.5, -0.01)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 17/20\n",
-      "Backtesting all pairs using parameters (50, 2, 0.5, -0.005)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 18/20\n",
-      "Backtesting all pairs using parameters (50, 2, 0.5, -0.01)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 19/20\n",
-      "Backtesting all pairs using parameters (50, 3, 0.5, -0.005)\n",
-      "-------------------------------------------------------------------------\n",
-      "Running 20/20\n",
-      "Backtesting all pairs using parameters (50, 3, 0.5, -0.01)\n",
-      "-------------------------------------------------------------------------\n"
+      "Running 1/24\n",
+      "Backtesting all pairs using parameters (20, 2, 0.5, -0.005)\n",
+      "----------------------------------------------------"
      ]
     }
    ],
@@ -265,8 +210,8 @@
     "\n",
     "        # get data of both stock\n",
     "        stk0_df, stk1_df = data[stk0], data[stk1]\n",
-    "        stk0_df_test = stk0_df[PAIR_FORMATION_LEN : PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
-    "        stk1_df_test = stk1_df[PAIR_FORMATION_LEN : PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
+    "        stk0_df_test = stk0_df[PRE_PAIR_FORMATION + PAIR_FORMATION_LEN : PRE_PAIR_FORMATION + PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
+    "        stk1_df_test = stk1_df[PRE_PAIR_FORMATION + PAIR_FORMATION_LEN : PRE_PAIR_FORMATION + PAIR_FORMATION_LEN + MAX_LOOKBACK + TEST_PERIOD]\n",
     "        \n",
     "        # Create a cerebro\n",
     "        cerebro = bt.Cerebro()\n",
